2017/gateway/iptables-save
# Generated by iptables-save v1.4.21 on Mon Feb 12 11:59:15 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0
:mobile - [0:0]
:reject - [0:0]
:explicit_allow - [0:0]
-A INPUT -s 10.20.0.0/16 -p icmp -j ACCEPT
-A INPUT -s 10.20.0.0/16 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 10.20.0.0/16 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 10.20.0.0/16 -i eth1 -j DROP
-A FORWARD -s 10.20.0.0/16 -j mobile
-A FORWARD -i eth0 -o eth1 -j ACCEPT
-A mobile -m mark --mark 0x4 -j reject
-A mobile -j explicit_allow
-A mobile -p tcp -m tcp --dport 465 -j ACCEPT
-A mobile -p tcp -m tcp --dport 80 -j ACCEPT
-A mobile -p tcp -m tcp --dport 443 -j ACCEPT
-A mobile -p tcp -m tcp --dport 993 -j ACCEPT
-A mobile -p tcp -m tcp --dport 143 -j ACCEPT
-A mobile -p tcp -m tcp --dport 5222:5228 -j ACCEPT
-A mobile -p tcp -m tcp --dport 4443 -j ACCEPT
-A mobile -p tcp -m tcp --dport 8443 -j ACCEPT
-A mobile -p udp -m udp --dport 53 -j ACCEPT
-A mobile -p udp -j REJECT --reject-with icmp-port-unreachable
-A mobile -p tcp -j REJECT --reject-with tcp-reset
-A reject -p udp -j REJECT --reject-with icmp-port-unreachable
-A reject -p tcp -j REJECT --reject-with tcp-reset
-A explicit_allow -d allowed.i.p.address -j ACCEPT
COMMIT
# Completed on Mon Feb 12 11:59:15 2018
# Generated by iptables-save v1.4.21 on Mon Feb 12 11:59:15 2018
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:FB_do - [0:0]
:FB_ip - [0:0]
:mobile - [0:0]
-A PREROUTING -s 10.20.0.0/16 -j mobile
-A FB_do -j MARK --set-xmark 0x4/0xffffffff
-A FB_ip -d black.listed.ip.address -j FB_do
-A mobile -j FB_ip
COMMIT
# Completed on Mon Feb 12 11:59:15 2018
# Generated by iptables-save v1.4.21 on Mon Feb 12 11:59:15 2018
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -s 10.20.0.0/16 ! -d 172.16.0.1/32 -p udp -m udp --dport 53 -j DNAT --to-destination 172.16.0.1:53
-A PREROUTING -s 10.20.0.0/16 ! -d 172.16.0.1/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 172.16.0.1:53
-A POSTROUTING -s 172.16.0.11/32 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.20.0.0/16 -o eth0 -j MASQUERADE
COMMIT
# Completed on Mon Feb 12 11:59:15 2018
